--- a/catalogo.html
+++ b/catalogo.html
@@ -206,8 +206,8 @@
         <!-- Botones para filtrar por tipo de producto -->
         <div class="filter-buttons">
             <button onclick="showProducts('product')">Todos</button>
-            <button onclick="showProducts('altoformato')">Impresion Alto Formato</button>
-            <button onclick="showProducts('prendas')">Prendas</button>
+            <button onclick="showProducts('altoformato')">Impresion de Alto Formato</button>
+            <button onclick="showProducts('prendas')">Playeras, Sudaderas y Gorras</button>
 			<button onclick="showProducts('taza')">Taza, Tarro y Botella</button>
 			<button onclick="showProducts('volantes')">Volantes</button>
 			<button onclick="showProducts('tarjetas')">Tarjetas de Presentacion</button>
